fix: scrollbar showing

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -13,7 +13,7 @@ body,
     overflow-y: auto;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 0;
     height: 0;
 }
